<resources>
    <string name="app_name">GioPost</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="error_msg">This user does not exist. Check your username and password or register online</string>
    <string name="title_activity_feed">Friends\' list</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_add_friend"> </string>
    <string name="username_label">Username</string>
    <string name="add_new_friend">Add new friend</string>
    <string name="error_network_fetching">There\'s no user with such prefix</string>
    <string name="title_activity_profile">My profile</string>
    <string name="title_activity_status_update">Update status</string>
    <string name="status_update">Update your status</string>
    <string name="status_type">Type your new status</string>
    <string name="update">Update</string>
    <string name="last_status">Last status sent</string>
    <string name="empty_list">You are not following anybody</string>
    <string name="autologin_gio_user">AutoLogin - gio_user</string>
    <string name="title_activity_map">Where are my friends?</string>
    <string name="sad_face">I\'m sad!</string>
    <string name="no_permission">This app is supposed to have location permission in order to work properly</string>
    <string name="grant_permission">Grant permission</string>
    <string name="unfriendly_user">You said you don\'t want to be asked again, so I won\'t ask. But I won\'t work either without location permission so you need to go and grant them manually from settings</string>
    <string name="al_1">AL-1</string>
    <string name="al_2">AL-2</string>
    <string name="al_3">AL-3</string>
    <string name="al_4">AL-4</string>
</resources>
