<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.gioaudino.geopost.StatusUpdateActivity"
    tools:showIn="@layout/activity_status_update">

    <TextView
        android:id="@+id/profile_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/status_update"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/status_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/status_type"
        android:inputType="textPersonName" />

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:id="@+id/update_progress"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/button_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="sendUpdate"
        android:enabled="false"
        android:text="@string/update"
        android:textAlignment="center" />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/update_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>